    - "Flexible offshore pump placement" is removed, as you can now always place them anywhere in editor mode.
    - Project surfaces now always have "ignore surface conditions" enabled, allowing you to place anything from any planet in Space Age.
  Other:
    - I like trains
---------------------------------------------------------------------------------------------------
Version: 2.1.4
Date: 2025-01-07
  Bugfixes:
    - Fixed multiple issues related to 2.0 rails and elevated rails.
---------------------------------------------------------------------------------------------------
Version: 2.1.3
Date: 2024-12-15
  Bugfixes:
    - Fixed handling of entities of different qualities (2.0).
---------------------------------------------------------------------------------------------------
Version: 2.1.2
Date: 2024-12-07
  Changes:
    - Improved rendering of entity info GUI in trains.
---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: 2024-12-07
  Bugfixes:
    - Fixed soft crash when creating entities with modules
    - which was due to the most absurd compiler bug you've never heard of: https://github.com/TypeScriptToLua/TypeScriptToLua/issues/1605
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 2024-12-02
  Features:
    - Actually support new prototypes/entities added in 2.0.
    - Added "Place offshore pumps anywhere" option. Note you still need to place an offshore pump on a liquid tile to
      pump, as that determines which fluid to pump.
  Bugfixes:
    - Fixed that some entity types (like fluid pumps) didn't show the entity info gui.
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2024-11-30
  Other:
    - Factorio 2.0 support!
    - Note that migrations from before 1.1 are not supported.
    - Removed features made obsolete in Factorio 2.0.